(lang dune 3.16)

(name met2)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Mateus Felipe da Silva")

(maintainers "Mateus Felipe da Silva")

(license LICENSE)


(package
 (name met2)
 (synopsis "Usa a API do redemet para obter o METAR")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

